--- a/for_damon_patches/todo
+++ b/for_damon_patches/todo
@@ -16,3 +16,4 @@ Done
 
 - s/snprintf()/scnprintf() (Marco Elver)
 - Let kdamonds from user space/kernel space distinguishable by the name
+- Move unnecessarily global variable (debugfs_root) to local
